cool.output
Terminals unused in grammar

    ERROR


State 66 conflicts: 2 shift/reduce
State 69 conflicts: 2 shift/reduce
State 70 conflicts: 2 shift/reduce
State 91 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 129 conflicts: 9 shift/reduce
State 138 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS error '{' dummy_feature_list '}' ';'

    7 dummy_feature_list: ε
    8                   | feature_list

    9 feature_list: feature
   10             | feature_list feature

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID ';'
   14        | error ';'

   15 formal_list: ε
   16            | formal_list_non_empty

   17 formal_list_non_empty: formal
   18                      | formal_list_non_empty ',' formal
   19                      | formal_list_non_empty ',' error

   20 formal: OBJECTID ':' TYPEID

   21 expr_list: ε
   22          | expr_list_non_empty

   23 expr_list_non_empty: expr
   24                    | expr_list_non_empty ',' expr

   25 expr: OBJECTID ASSIGN expr
   26     | expr '+' expr
   27     | expr '-' expr
   28     | expr '*' expr
   29     | expr '/' expr
   30     | '(' expr ')'
   31     | INT_CONST
   32     | STR_CONST
   33     | BOOL_CONST
   34     | OBJECTID
   35     | IF expr THEN expr ELSE expr FI
   36     | WHILE expr LOOP expr POOL
   37     | '{' expr_list '}'
   38     | LET OBJECTID ':' TYPEID IN expr
   39     | LET OBJECTID ':' TYPEID ASSIGN expr IN expr
   40     | CASE expr OF case_list ESAC
   41     | NEW TYPEID
   42     | ISVOID expr
   43     | '~' expr
   44     | NOT expr
   45     | expr '<' expr
   46     | expr LE expr
   47     | expr '=' expr
   48     | '{' error '}'
   49     | OBJECTID '(' expr_list ')'
   50     | expr '.' OBJECTID '(' expr_list ')'
   51     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'

   52 case_list: case
   53          | case_list case

   54 case: OBJECTID ':' TYPEID DARROW expr


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 30 49 50 51
    ')' (41) 11 30 49 50 51
    '*' (42) 28
    '+' (43) 26
    ',' (44) 18 19 24
    '-' (45) 27
    '.' (46) 50 51
    '/' (47) 29
    ':' (58) 11 12 13 20 38 39 54
    ';' (59) 4 5 6 11 12 13 14
    '<' (60) 45
    '=' (61) 47
    '@' (64) 51
    '{' (123) 4 5 6 11 37 48
    '}' (125) 4 5 6 11 37 48
    '~' (126) 43
    error (256) 6 14 19 48
    CLASS (258) 4 5 6
    ELSE (259) 35
    FI (260) 35
    IF (261) 35
    IN (262) 38 39
    INHERITS (263) 5
    LET (264) 38 39
    LOOP (265) 36
    POOL (266) 36
    THEN (267) 35
    WHILE (268) 36
    CASE (269) 40
    ESAC (270) 40
    OF (271) 40
    DARROW (272) 54
    NEW (273) 41
    ISVOID (274) 42
    STR_CONST <symbol> (275) 32
    INT_CONST <symbol> (276) 31
    BOOL_CONST <boolean> (277) 33
    TYPEID <symbol> (278) 4 5 11 12 13 20 38 39 41 51 54
    OBJECTID <symbol> (279) 11 12 13 20 25 34 38 39 49 50 51 54
    ASSIGN (280) 12 25 39
    NOT (281) 44
    LE (282) 46
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    dummy_feature_list <features> (49)
        on left: 7 8
        on right: 4 5 6
    feature_list <features> (50)
        on left: 9 10
        on right: 8 10
    feature <feature> (51)
        on left: 11 12 13 14
        on right: 9 10
    formal_list <formals> (52)
        on left: 15 16
        on right: 11
    formal_list_non_empty <formals> (53)
        on left: 17 18 19
        on right: 16 18 19
    formal <formal> (54)
        on left: 20
        on right: 17 18
    expr_list <expressions> (55)
        on left: 21 22
        on right: 37 49 50 51
    expr_list_non_empty <expressions> (56)
        on left: 23 24
        on right: 22 24
    expr <expression> (57)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 11 12 23 24 25 26 27 28 29 30 35 36 38 39 40 42 43 44 45 46 47 50 51 54
    case_list <cases> (58)
        on left: 52 53
        on right: 40 53
    case <case_> (59)
        on left: 54
        on right: 52 53


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | CLASS • error '{' dummy_feature_list '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    6 class: CLASS error • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID • '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    6 class: CLASS error '{' • dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 14
    feature_list        go to state 15
    feature             go to state 16


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 17


State 11

    4 class: CLASS TYPEID '{' • dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 18
    feature_list        go to state 15
    feature             go to state 16


State 12

   14 feature: error • ';'

    ';'  shift, and go to state 19


State 13

   11 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   12        | OBJECTID • ':' TYPEID ASSIGN expr ';'
   13        | OBJECTID • ':' TYPEID ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 14

    6 class: CLASS error '{' dummy_feature_list • '}' ';'

    '}'  shift, and go to state 22


State 15

    8 dummy_feature_list: feature_list •
   10 feature_list: feature_list • feature

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 8 (dummy_feature_list)

    feature  go to state 23


State 16

    9 feature_list: feature •

    $default  reduce using rule 9 (feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID • '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 24


State 18

    4 class: CLASS TYPEID '{' dummy_feature_list • '}' ';'

    '}'  shift, and go to state 25


State 19

   14 feature: error ';' •

    $default  reduce using rule 14 (feature)


State 20

   11 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 15 (formal_list)

    formal_list            go to state 27
    formal_list_non_empty  go to state 28
    formal                 go to state 29


State 21

   12 feature: OBJECTID ':' • TYPEID ASSIGN expr ';'
   13        | OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 30


State 22

    6 class: CLASS error '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 31


State 23

   10 feature_list: feature_list feature •

    $default  reduce using rule 10 (feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' • dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 32
    feature_list        go to state 15
    feature             go to state 16


State 25

    4 class: CLASS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 33


State 26

   20 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 34


State 27

   11 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 35


State 28

   16 formal_list: formal_list_non_empty •
   18 formal_list_non_empty: formal_list_non_empty • ',' formal
   19                      | formal_list_non_empty • ',' error

    ','  shift, and go to state 36

    $default  reduce using rule 16 (formal_list)


State 29

   17 formal_list_non_empty: formal •

    $default  reduce using rule 17 (formal_list_non_empty)


State 30

   12 feature: OBJECTID ':' TYPEID • ASSIGN expr ';'
   13        | OBJECTID ':' TYPEID • ';'

    ASSIGN  shift, and go to state 37
    ';'     shift, and go to state 38


State 31

    6 class: CLASS error '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list • '}' ';'

    '}'  shift, and go to state 39


State 33

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 34

   20 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 40


State 35

   11 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 41


State 36

   18 formal_list_non_empty: formal_list_non_empty ',' • formal
   19                      | formal_list_non_empty ',' • error

    error     shift, and go to state 42
    OBJECTID  shift, and go to state 26

    formal  go to state 43


State 37

   12 feature: OBJECTID ':' TYPEID ASSIGN • expr ';'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 58


State 38

   13 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 13 (feature)


State 39

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' • ';'

    ';'  shift, and go to state 59


State 40

   20 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 20 (formal)


State 41

   11 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 60


State 42

   19 formal_list_non_empty: formal_list_non_empty ',' error •

    $default  reduce using rule 19 (formal_list_non_empty)


State 43

   18 formal_list_non_empty: formal_list_non_empty ',' formal •

    $default  reduce using rule 18 (formal_list_non_empty)


State 44

   35 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 61


State 45

   38 expr: LET • OBJECTID ':' TYPEID IN expr
   39     | LET • OBJECTID ':' TYPEID ASSIGN expr IN expr

    OBJECTID  shift, and go to state 62


State 46

   36 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 63


State 47

   40 expr: CASE • expr OF case_list ESAC

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 64


State 48

   41 expr: NEW • TYPEID

    TYPEID  shift, and go to state 65


State 49

   42 expr: ISVOID • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 66


State 50

   32 expr: STR_CONST •

    $default  reduce using rule 32 (expr)


State 51

   31 expr: INT_CONST •

    $default  reduce using rule 31 (expr)


State 52

   33 expr: BOOL_CONST •

    $default  reduce using rule 33 (expr)


State 53

   25 expr: OBJECTID • ASSIGN expr
   34     | OBJECTID •
   49     | OBJECTID • '(' expr_list ')'

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 34 (expr)


State 54

   44 expr: NOT • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 69


State 55

   43 expr: '~' • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 70


State 56

   37 expr: '{' • expr_list '}'
   48     | '{' • error '}'

    error       shift, and go to state 71
    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    '}'  reduce using rule 21 (expr_list)

    expr_list            go to state 72
    expr_list_non_empty  go to state 73
    expr                 go to state 74


State 57

   30 expr: '(' • expr ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 75


State 58

   12 feature: OBJECTID ':' TYPEID ASSIGN expr • ';'
   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LE   shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '='  shift, and go to state 81
    '<'  shift, and go to state 82
    ';'  shift, and go to state 83
    '.'  shift, and go to state 84
    '@'  shift, and go to state 85


State 59

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 60

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expr '}' ';'

    '{'  shift, and go to state 86


State 61

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   35     | IF expr • THEN expr ELSE expr FI
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    THEN  shift, and go to state 87
    LE    shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '='   shift, and go to state 81
    '<'   shift, and go to state 82
    '.'   shift, and go to state 84
    '@'   shift, and go to state 85


State 62

   38 expr: LET OBJECTID • ':' TYPEID IN expr
   39     | LET OBJECTID • ':' TYPEID ASSIGN expr IN expr

    ':'  shift, and go to state 88


State 63

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   36     | WHILE expr • LOOP expr POOL
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LOOP  shift, and go to state 89
    LE    shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '='   shift, and go to state 81
    '<'   shift, and go to state 82
    '.'   shift, and go to state 84
    '@'   shift, and go to state 85


State 64

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   40     | CASE expr • OF case_list ESAC
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    OF   shift, and go to state 90
    LE   shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '='  shift, and go to state 81
    '<'  shift, and go to state 82
    '.'  shift, and go to state 84
    '@'  shift, and go to state 85


State 65

   41 expr: NEW TYPEID •

    $default  reduce using rule 41 (expr)


State 66

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   42     | ISVOID expr •
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    '.'  shift, and go to state 84
    '@'  shift, and go to state 85

    '.'       [reduce using rule 42 (expr)]
    '@'       [reduce using rule 42 (expr)]
    $default  reduce using rule 42 (expr)


State 67

   25 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 91


State 68

   49 expr: OBJECTID '(' • expr_list ')'

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    $default  reduce using rule 21 (expr_list)

    expr_list            go to state 92
    expr_list_non_empty  go to state 73
    expr                 go to state 74


State 69

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   44     | NOT expr •
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    '.'  shift, and go to state 84
    '@'  shift, and go to state 85

    '.'       [reduce using rule 44 (expr)]
    '@'       [reduce using rule 44 (expr)]
    $default  reduce using rule 44 (expr)


State 70

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   43     | '~' expr •
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    '.'  shift, and go to state 84
    '@'  shift, and go to state 85

    '.'       [reduce using rule 43 (expr)]
    '@'       [reduce using rule 43 (expr)]
    $default  reduce using rule 43 (expr)


State 71

   48 expr: '{' error • '}'

    '}'  shift, and go to state 93


State 72

   37 expr: '{' expr_list • '}'

    '}'  shift, and go to state 94


State 73

   22 expr_list: expr_list_non_empty •
   24 expr_list_non_empty: expr_list_non_empty • ',' expr

    ','  shift, and go to state 95

    $default  reduce using rule 22 (expr_list)


State 74

   23 expr_list_non_empty: expr •
   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LE   shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '='  shift, and go to state 81
    '<'  shift, and go to state 82
    '.'  shift, and go to state 84
    '@'  shift, and go to state 85

    $default  reduce using rule 23 (expr_list_non_empty)


State 75

   26 expr: expr • '+' expr
   27     | expr • '-' expr
   28     | expr • '*' expr
   29     | expr • '/' expr
   30     | '(' expr • ')'
   45     | expr • '<' expr
   46     | expr • LE expr
   47     | expr • '=' expr
   50     | expr • '.' OBJECTID '(' expr_list ')'
   51     | expr • '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LE   shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '='  shift, and go to state 81
    '<'  shift, and go to state 82
    ')'  shift, and go to state 96
    '.'  shift, and go to state 84
    '@'  shift, and go to state 85


State 76

   46 expr: expr LE • expr

    IF          shift, and go to state 44
    LET         shift, and go to state 45
    WHILE       shift, and go to state 46
    CASE        shift, and go to state 47
    NEW         shift, and go to state 48
    ISVOID      shift, and go to state 49
    STR_CONST   shift, and go to state 50
    INT_CONST   shift, and go to state 51
    BOOL_CONST  shift, and go to state 52
    OBJECTID    shift, and go to state 53
    NOT         shift, and go to state 54
    '~'         shift, and go to state 55
    '{'         shift, and go to state 56
    '('         shift, and go to state 57

    expr  go to state 97


State 77

   26 expr: expr '+' • expr
